# rudapt

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  dev.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_api_keys.py  0003_report_regions.py  0004_telegram.py  0005_subscriptions.py
backend/app/: config.py  db.py  deps.py  main.py  security.py
backend/app/api/: api_keys.py  auth.py  billing.py  reports.py  startups.py  telegram.py  v1.py
backend/app/bot/: main.py
backend/app/models/: __init__.py  api_key.py  report.py  startup.py  subscription.py  telegram.py  user.py
backend/app/schemas/: api_key.py  auth.py  report.py  startup.py  user.py
backend/app/services/: api_keys.py  llm.py  markdown.py  pdf.py  platega.py  prompt.py  queue.py  rate_limit.py
backend/app/services/scraper/: base.py  crunchbase.py  producthunt.py  runner.py  textutil.py  yc.py
backend/app/workers/: arq_app.py  generate.py  ingest.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/api-keys/: page.tsx
frontend/src/app/(app)/billing/: page.tsx
frontend/src/components/: Logo.tsx  Providers.tsx  RegionPickerDialog.tsx  StartupCard.tsx  StartupFilters.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx
frontend/src/lib/: api.ts  regions.ts
pdf-service/: Dockerfile  index.js  package.json
(+6 files in other folders)
